# local-llm

./: .gitignore  .gitmodules  CMakeLists.txt  input_sample.txt  main.cpp
benchmarks/: gpu_layers_speed.txt
